# toolsbench

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
.agents/: BRAINSTORMING.md  IDEA.md
.agents/decisions/: ARCADE_EVAL_SUITE.md
.agents/plans/: HIGHLEVEL.md  PLAN_ISSUES.md  marketplace-integration.md  tool-registry-integration.md
